[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pythomac_FlussTeam"
version = "1.1.7"
authors = [
  { name="FlussTeam/Hydro-Informatics.com", email="schwindt.water@gmail.com" },
]
description = "A Python package with codes to wrap and control the numerical modeling software Telemac."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://flusstools.readthedocs.io/"
"Bug Tracker" = "https://github.com/Ecohydraulics/flusstools/issues"
